[package]
name = "insight_cue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "iq"
path = "src/main.rs"


[dependencies]
directories = "4.0.1"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
serde_derive = "1.0.154"
